--- a/index.html
+++ b/index.html
@@ -3,68 +3,68 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hydro Coding</title>
+    <title>Hydro Coding | Home</title>
     <link rel="stylesheet" href="style.css">
     <script defer src="script.js"></script>
 </head>
 <body class="dark-theme">
     <!-- Navbar -->
     <nav class="navbar">
-        <div class="logo">Hydro Coding</div>
+        <div class="logo">Hydro<span> Coding</span></div>
         <ul class="nav-links">
             <li><a href="#home">Home</a></li>
             <li><a href="#projects">Projects</a></li>
             <li><a href="#community">Community</a></li>
             <li><a href="#contact">Contact</a></li>
-            <li><button id="theme-toggle">🌙</button></li>
+            <li><button id="theme-toggle" title="Toggle Theme">🌙</button></li>
         </ul>
     </nav>
 
     <!-- Hero Section -->
-    <section id="home" class="hero">
-        <h1>Welcome to Hydro Coding</h1>
-        <p>Join a community of developers, collaborate on projects, and learn together.</p>
-        <a href="#community" class="cta-button">Join the Community</a>
-    </section>
+    <header id="home" class="hero">
+        <div class="hero-text">
+            <h1>Welcome to <span>Hydro Coding</span></h1>
+            <p>Connect, Collaborate, and Code Together</p>
+            <a href="#community" class="cta-button">Join Now</a>
+        </div>
+    </header>
 
     <!-- Projects Section -->
     <section id="projects" class="projects">
-        <h2>Featured Projects</h2>
+        <h2>Showcase Your Work</h2>
         <div class="project-list">
             <div class="project">
-                <h3>Project 1</h3>
-                <p>Description of Project 1.</p>
-                <a href="#">Learn More</a>
+                <h3>Project Alpha</h3>
+                <p>Innovative solutions using AI and Python.</p>
+                <a href="#" class="learn-more">Learn More</a>
             </div>
             <div class="project">
-                <h3>Project 2</h3>
-                <p>Description of Project 2.</p>
-                <a href="#">Learn More</a>
+                <h3>Web Masters</h3>
+                <p>Advanced full-stack development guides.</p>
+                <a href="#" class="learn-more">Learn More</a>
             </div>
-            <!-- Add more projects as needed -->
         </div>
     </section>
 
     <!-- Community Section -->
     <section id="community" class="community">
-        <h2>Community Discussions</h2>
+        <h2>Community Chat</h2>
         <div class="chat-box">
-            <p><strong>User1:</strong> How do I get started with Python?</p>
-            <p><strong>User2:</strong> You can check out our Python resources in the Resources tab!</p>
-            <!-- Add more sample discussions -->
+            <p><strong>Alice:</strong> Just solved my first Python bug!</p>
+            <p><strong>Bob:</strong> Great job, Alice! Keep going 💪</p>
+            <a href="#" class="cta-button">Join Our Discord</a>
         </div>
-        <a href="#" class="cta-button">Join Discord</a>
     </section>
 
     <!-- Contact Section -->
     <section id="contact" class="contact">
         <h2>Contact Us</h2>
-        <p>If you have any questions, feel free to reach out!</p>
+        <p>Have questions? Reach out!</p>
         <form>
-            <input type="text" placeholder="Your Name">
-            <input type="email" placeholder="Your Email">
-            <textarea placeholder="Your Message"></textarea>
-            <button type="submit">Send</button>
+            <input type="text" placeholder="Your Name" required>
+            <input type="email" placeholder="Your Email" required>
+            <textarea placeholder="Your Message" required></textarea>
+            <button type="submit">Send Message</button>
         </form>
     </section>
 
@@ -72,6 +72,5 @@
     <footer>
         <p>&copy; 2024 Hydro Coding. All rights reserved.</p>
     </footer>
-
 </body>
 </html>
