--- a/index.html
+++ b/index.html
@@ -32,9 +32,10 @@
     <h2 class="text-3xl font-bold text-center text-blue-400 mb-8">Our Projects</h2>
     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
       <div class="bg-gray-800 p-6 rounded-lg shadow-lg hover:shadow-xl transition">
-        <h3 class="text-2xl font-semibold mb-2 text-white">Project A</h3>
-        <p class="mb-4">Innovative project tackling AI challenges in development.</p>
-        <a href="#" class="text-blue-400 hover:underline">Read more &rarr;</a>
+        <h3 class="text-2xl font-semibold mb-2 text-white">Discord Music Bot</h3>
+        <h2 class="text-l font-semibold mb-2 text-white"><a href="https://github.com/PgNetwork01">By - Pg Network</a></h2>
+        <p class="mb-4">An open source code for discord music bot using python with slash commands. (Mainly For private Bots)</p>
+        <a href="https://github.com/PgNetwork01/discord-music-bot" class="text-blue-400 hover:underline">Read more &rarr;</a>
       </div>
       <div class="bg-gray-800 p-6 rounded-lg shadow-lg hover:shadow-xl transition">
         <h3 class="text-2xl font-semibold mb-2 text-white">Project B</h3>
