--- a/index.html
+++ b/index.html
@@ -11,7 +11,15 @@
   <!-- Navbar -->
   <nav class="flex items-center justify-between p-5 bg-gray-800 shadow-md">
     <div class="text-2xl font-bold text-blue-400">Hydro<span class="text-white">Coding</span></div>
-    <ul class="flex space-x-4 text-lg">
+    <div class="md:hidden">
+      <button id="menu-toggle" class="text-gray-200 focus:outline-none">
+        <!-- Hamburger Icon -->
+        <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7"></path>
+        </svg>
+      </button>
+    </div>
+    <ul id="nav-menu" class="hidden md:flex space-x-4 text-lg">
       <li><a href="#home" class="hover:text-blue-400">Home</a></li>
       <li><a href="#projects" class="hover:text-blue-400">Projects</a></li>
       <li><a href="#community" class="hover:text-blue-400">Community</a></li>
@@ -19,6 +27,16 @@
       <li><button id="theme-toggle" class="ml-4 p-2 bg-blue-600 rounded">🌙</button></li>
     </ul>
   </nav>
+
+  <!-- Mobile Menu -->
+  <div id="mobile-menu" class="md:hidden hidden">
+    <ul class="flex flex-col space-y-2 p-5 bg-gray-800 text-lg">
+      <li><a href="#home" class="hover:text-blue-400">Home</a></li>
+      <li><a href="#projects" class="hover:text-blue-400">Projects</a></li>
+      <li><a href="#community" class="hover:text-blue-400">Community</a></li>
+      <li><a href="#contact" class="hover:text-blue-400">Contact</a></li>
+    </ul>
+  </div>
 
   <!-- Hero Section -->
   <section id="home" class="flex flex-col items-center justify-center text-center py-20 bg-gray-800">
