--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <li><a href="#projects" class="hover:text-blue-400">Projects</a></li>
       <li><a href="#community" class="hover:text-blue-400">Community</a></li>
       <li><a href="#contact" class="hover:text-blue-400">Contact</a></li>
-      <li><button id="theme-toggle" class="ml-4 p-2 bg-blue-600 rounded">🌙</button></li>
+      <li><button id="theme-toggle" class="ml-4 rounded">🌙</button></li>
     </ul>
   </nav>
 
