--- a/index.html
+++ b/index.html
@@ -76,13 +76,11 @@
 
   <!-- Contact Section -->
   <section id="contact" class="py-20 px-10 bg-gray-900">
-    <h2 class="text-3xl font-bold text-center text-blue-400 mb-8">Contact Us</h2>
-    <form class="flex flex-col items-center max-w-md mx-auto space-y-4">
-      <input type="text" placeholder="Your Name" class="w-full p-4 bg-gray-800 rounded-lg text-white" required>
-      <input type="email" placeholder="Your Email" class="w-full p-4 bg-gray-800 rounded-lg text-white" required>
-      <textarea placeholder="Your Message" class="w-full p-4 bg-gray-800 rounded-lg text-white" required></textarea>
-      <button type="submit" class="px-6 py-3 bg-blue-600 text-white rounded-lg hover:bg-blue-500 transition">Send Message</button>
-    </form>
+    <h2 class="text-3xl font-bold text-center text-blue-400 mb-8">Hire Devs</h2>
+    <div class="bg-gray-800 p-6 rounded-lg shadow-lg hover:shadow-xl transition">
+      <h3 class="text-2xl font-semibold mb-2 text-white">Use Dev discord bot created by Pg Network. You can request help, Hire dev, confirm the work completion, create a dev profile, etc.</h3>
+      <a href="https://hire-devs.github.io/dev/" class="text-blue-400 hover:underline">Read more &rarr;</a>
+    </div>
   </section>
 
   <!-- Footer -->
