--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <li><a href="#home" class="hover:text-blue-400">Home</a></li>
       <li><a href="#projects" class="hover:text-blue-400">Projects</a></li>
       <li><a href="#community" class="hover:text-blue-400">Community</a></li>
-      <li><a href="#contact" class="hover:text-blue-400">Contact</a></li>
+      <li><a href="https://discord.gg/beEVV9veqD" class="hover:text-blue-400">Contact</a></li>
     </ul>
   </div>
 
@@ -42,7 +42,7 @@
   <section id="home" class="flex flex-col items-center justify-center text-center py-20 bg-gray-800">
     <h1 class="text-4xl font-extrabold mb-4 text-white">Welcome to <span class="text-blue-400">Hydro Coding</span></h1>
     <p class="text-lg mb-6">A community of coders collaborating, learning, and building together.</p>
-    <a href="#community" class="px-6 py-3 bg-blue-600 text-white rounded-lg hover:bg-blue-500 transition">Join Us</a>
+    <a href="https://discord.gg/beEVV9veqD" class="px-6 py-3 bg-blue-600 text-white rounded-lg hover:bg-blue-500 transition">Join Us</a>
   </section>
 
   <!-- Projects Section -->
@@ -70,7 +70,7 @@
     <div class="bg-gray-900 p-6 rounded-lg shadow-lg">
       <p><strong>Alice:</strong> “Just finished debugging my Python app!”</p>
       <p><strong>Bob:</strong> “Awesome work, Alice! Keep it up!”</p>
-      <a href="#" class="block mt-4 px-6 py-3 bg-blue-600 text-center text-white rounded-lg hover:bg-blue-500 transition">Join Our Discord &rarr;</a>
+      <a href="https://discord.gg/beEVV9veqD" class="block mt-4 px-6 py-3 bg-blue-600 text-center text-white rounded-lg hover:bg-blue-500 transition">Join Our Discord &rarr;</a>
     </div>
   </section>
 
