--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <li><a href="#home" class="hover:text-blue-400">Home</a></li>
       <li><a href="#projects" class="hover:text-blue-400">Projects</a></li>
       <li><a href="#community" class="hover:text-blue-400">Community</a></li>
-      <li><a href="#contact" class="hover:text-blue-400">Contact</a></li>
+      <li><a href="https://discord.gg/beEVV9veqD" class="hover:text-blue-400">Contact</a></li>
       <li><button id="theme-toggle" class="ml-4 rounded">🌙</button></li>
     </ul>
   </nav>
@@ -56,9 +56,10 @@
         <a href="https://github.com/PgNetwork01/discord-music-bot" class="text-blue-400 hover:underline">Read more &rarr;</a>
       </div>
       <div class="bg-gray-800 p-6 rounded-lg shadow-lg hover:shadow-xl transition">
-        <h3 class="text-2xl font-semibold mb-2 text-white">Project B</h3>
-        <p class="mb-4">Web development guides and tools for developers.</p>
-        <a href="#" class="text-blue-400 hover:underline">Read more &rarr;</a>
+        <h3 class="text-2xl font-semibold mb-2 text-white">Multipurpose Discord Bot</h3>
+        <h2 class="text-l font-semibold mb-2 text-white"><a href="https://github.com/PgNetwork01">By - Pg Network</a></h2>
+        <p class="mb-4">The Web Wizard Discord bot is a versatile and feature-rich bot designed to enhance your Discord server experience. It includes various commands for user interaction, moderation, and entertainment. This bot is open-source and welcomes contributions from developers and enthusiasts.</p>
+        <a href="https://github.com/PgNetwork01/discord-bot" class="text-blue-400 hover:underline">Read more &rarr;</a>
       </div>
       <!-- More project cards as needed -->
     </div>
