--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <div class="bg-gray-800 p-6 rounded-lg shadow-lg hover:shadow-xl transition">
         <h3 class="text-2xl font-semibold mb-2 text-white">Multipurpose Discord Bot</h3>
         <h2 class="text-l font-semibold mb-2 text-white"><a href="https://github.com/PgNetwork01">By - Pg Network</a></h2>
-        <p class="mb-4">The Web Wizard Discord bot is a versatile and feature-rich bot designed to enhance your Discord server experience. It includes various commands for user interaction, moderation, and entertainment. This bot is open-source and welcomes contributions from developers and enthusiasts.</p>
+        <p class="mb-4">The Web Wizard Discord bot is a versatile and feature-rich bot designed to enhance your Discord server experience.</p>
         <a href="https://github.com/PgNetwork01/discord-bot" class="text-blue-400 hover:underline">Read more &rarr;</a>
       </div>
       <!-- More project cards as needed -->
@@ -79,7 +79,7 @@
   <section id="contact" class="py-20 px-10 bg-gray-900">
     <h2 class="text-3xl font-bold text-center text-blue-400 mb-8">Hire Devs</h2>
     <div class="bg-gray-800 p-6 rounded-lg shadow-lg hover:shadow-xl transition">
-      <h3 class="text-2xl font-semibold mb-2 text-white">Use Dev discord bot created by Pg Network. You can request help, Hire dev, confirm the work completion, create a dev profile, etc.</h3>
+      <h4 class="text-2xl font-semibold mb-2 text-white">Use Dev discord bot created by Pg Network. You can request help, Hire dev, confirm the work completion, create a dev profile, etc.</h4>
       <a href="https://hire-devs.github.io/dev/" class="text-blue-400 hover:underline">Read more &rarr;</a>
     </div>
   </section>
